--- a/index.html
+++ b/index.html
@@ -1,8 +1,26 @@
 <html>
-<head><title></title>
+<head><title>michellefong</title>
+<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="https://use.typekit.net/vfo3zpm.css">
 
 </head>
 <body>
+	<div class="container">	
+
+		<div class="header">
+			<div id="left"><a href="index.html">michellefong</a></div>
+			<div id="right">•</div>
+		</div>
+
+		<div class="content">
+			<p id="info">I’m currently designing digital products at Work & Co. Updates to come.</p>
+		</div>
+
+		<div class="footer">
+			<div id="left">Portland, Oregon</div>
+			<div id="right">hello@michellefong.co</div>
+		</div>
+	</div>
 
 </body>
 </html>
