--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
+<!DOCTYPE html5>
 <html>
 <head><title>michellefong</title>
+<meta name="viewport" content="initial-scale=1, maximum-scale=1">
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://use.typekit.net/vfo3zpm.css">
 
