--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head><title>michellefong</title>
 <meta name="viewport" content="initial-scale=1, maximum-scale=1">
 <link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="https://use.typekit.net/vfo3zpm.css">
+<!-- <link rel="stylesheet" href="https://use.typekit.net/vfo3zpm.css"> -->
 <script>
 window['_fs_debug'] = false;
 window['_fs_host'] = 'fullstory.com';
