--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ window['_fs_namespace'] = 'FS';
 		</div>
 
 		<div class="content">
-			<p id="info">I&#39;m currently designing digital products at Work & Co. Updates to come.</p>
+			<p id="info">I&#39;m currently designing digital products at Work & Co.<br>Updates to come.</p>
 		</div>
 
 		<div class="footer">
