--- a/sketches/index.html
+++ b/sketches/index.html
@@ -7,10 +7,10 @@
     <script src="setup/p5.min.js"></script>
     <script src="setup/addons/p5.dom.min.js"></script>
     <script src="setup/addons/p5.sound.min.js"></script>
-    <script src="sketch.js"></script>
   </head>
   <body>
   hi
   <script src="sketch.js"></script>
+  test
   </body>
 </html>
