--- a/sketches/shapes/index.html
+++ b/sketches/shapes/index.html
@@ -2,7 +2,17 @@
 <html>
   <head>
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
-    <style> body {padding: 0; margin: 0;} </style>
+
+    <style>
+
+      body {
+        padding: 0;
+        margin: 0;
+        background-color: black;
+        }
+
+    </style>
+    
     <script src="setup/addons/p5.sound.js"></script>
     <script src="setup/p5.min.js"></script>
     <script src="setup/addons/p5.dom.min.js"></script>
