--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ window['_fs_namespace'] = 'FS';
 
 		<div class="footer">
 			<div id="left">Portland, Oregon</div>
-			<div id="right">hello@michellefong.co</div>
+			<div id="right">michellelsfong@gmail.com</div>
 		</div>
 	</div>
 
