--- a/m/zines/zines.html
+++ b/m/zines/zines.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html5>
 <html>
 <head>
-	<title>michelle.installations</title>
+	<title>michelle.zines</title>
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1">
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
 	<link rel="stylesheet" type="text/css" href="../css/mobile.css">
