--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div class="container">
 <div class="one-column">
 	<div class="list list-first">
-		<h1 id="left">Designer at Work & Co</h1>
+		<h1 id="left">Senior Designer at Work & Co</h1>
 		<h2 id="right">Portland, OR</h2>
 	</div>
 
