Touch ups, + instagram link

--- a/index.html
+++ b/index.html
@@ -2,30 +2,46 @@
 <html>
 <head>
 	<title>michelle</title>
-	<meta name="viewport" content="initial-scale=1, maximum-scale=1">
-	<link rel="stylesheet" href="https://use.typekit.net/gbi2uip.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" type="text/css" href="css/mobile.css">
+	<link rel="stylesheet" type="text/css" href="css/structure.css">
 	<link rel="stylesheet" type="text/css" href="css/index_fadein.css">
+	<link rel="stylesheet" href="https://use.typekit.net/gbi2uip.css">
+	<meta name="viewport" content="initial-scale=1, maximum-scale=1">
 </head>
-<body class="fade-in">
+<body>
 
-<div class="container-header">
-	<h2 class="header" id="sticky"><a href="index.html">michelle</a></h2>
-</div>
+<div class="page-container">
 
-<div class="container">
-<div class="one-column">
-	<div class="list list-first">
-		<h1 id="left">Designer at Work & Co</h1>
-		<h2 id="right">Portland, OR</h2>
+	<div class="page-header">michelle</div>
+
+	<div class="list-container">
+
+		<div class="list-row">
+			<div class="list-column-left header">Senior Designer at Work & Co</div>
+			<div class="list-column-right">Portland, OR</div>
+		</div>
+
+		<a href="https://www.instagram.com/mellefish">
+		<div class="list-row">
+			<div class="list-column-left header">Instagram</div>
+			<div class="list-column-right cta">→</div>
+		</div>
+		</a>
+
+<!-- 		<a href="installations.html">
+		<div class="list-row">
+			<div class="list-column-left header">Installations</div>
+			<div class="list-column-right cta">→</div>
+		</div>
+		</a> -->
+
+		<div class="list-row">
+			<div class="list-column-left header">Contact</div>
+			<div class="list-column-right">michellelsfong@gmail.com</div>
+		</div>
+
 	</div>
 
-	<div class="list list-last">
-		<h1 id="left">Contact</h1>
-		<h2 id="right">michellelsfong@gmail.com</h2>
-	</div>
-</div>
 </div>
 
 </body>
