Animation on hover

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="https://use.typekit.net/gbi2uip.css">
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1">
 </head>
-<body>
+<body class="fade-in">
 
 <div class="page-container">
 
@@ -21,19 +21,12 @@
 			<div class="list-column-right">Portland, OR</div>
 		</div>
 
-		<a href="https://www.instagram.com/mellefish">
+		<a href="https://www.instagram.com/mellefish/" target="_blank">
 		<div class="list-row">
 			<div class="list-column-left header">Instagram</div>
-			<div class="list-column-right cta">→</div>
+			<div class="list-column-right"><img src="assets/arrow.png" class="arrow"></div>
 		</div>
 		</a>
-
-<!-- 		<a href="installations.html">
-		<div class="list-row">
-			<div class="list-column-left header">Installations</div>
-			<div class="list-column-right cta">→</div>
-		</div>
-		</a> -->
 
 		<div class="list-row">
 			<div class="list-column-left header">Contact</div>
