--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 		<div class="list-row">
 			<div class="list-column-left header">Design Lead at Work & Co</div>
-			<div class="list-column-right">Portland, OR</div>
+			<div class="list-column-right">Los Angeles, CA</div>
 		</div>
 
 		<!--
