--- a/daily/index.html
+++ b/daily/index.html
@@ -2,7 +2,7 @@
   <head><title>Daily counter</title></head>
   <body>
 
-    <p>Morning pages</p>
+    <p>Counter</p>
 
     <button onclick="
       count();
