--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<div class="list-container">
 
 		<div class="list-row">
-			<div class="list-column-left header">Associate Design Director</div>
+			<div class="list-column-left header">Designer</div>
 			<div class="list-column-right">Los Angeles, CA</div>
 		</div>
 
