--- a/rate-calculator-ca.html
+++ b/rate-calculator-ca.html
@@ -41,9 +41,9 @@
     <br>Privately, your minimum hourly rate is $<span id="selfemHourlyRate"></span>. A rule of thumb is to double this amount,
     to account for benefits like insurance, software, time between projects, etc.
     <br>
-    <br>To work 5 days a week and make the equivalent of your salary, consider a $<span id="selfemDailyProfitDouble"></span>/hr rate.
-    <br>To work 4 days a week and make the equivalent of your salary, consider a $<span id="selfemWork4Days"></span>/hr rate.
-    <br>To work 3 days a week and make the equivalent of your salary, consider a $<span id="selfemWork3Days"></span>/hr rate.
+    <br>To work 5 days a week, consider a $<span id="selfemDailyProfitDouble"></span>/hr rate.
+    <br>To work 4 days a week, consider a $<span id="selfemWork4Days"></span>/hr rate.
+    <br>To work 3 days a week, consider a $<span id="selfemWork3Days"></span>/hr rate.
     <br>
 
     <script>
