--- a/calc/index.html
+++ b/calc/index.html
@@ -7,36 +7,139 @@
 
   <body>
 
+
+<!-- Accordion ----------------------------------------------------------------------------------------------->
+
     <div class="section">
-        <p>Your take-home pay:</p>
-        <input type="text" id="takeHomePay" value="2000">
-        <button onclick="calculate();">Calculate</button>
+      <h3>Your income</h3>
+        <p>Monthly take-home pay:</p>
+        $<input type="text" id="takeHomePay" value="2000">
+        <p><button onclick="calculate();" class="button">Calculate</button></p>
     </div>
 
     <div class="section">
-        <h3>Budget</h3>
-        <h2>Using the <a>50/30/20 rule</a>, your monthly budget comes out to:</h2>
+      <h3>Budget</h3>
+        <h2>A simple and trusted starting point is the <a>50/30/20 rule</a></h2>
+        <!-- <h2>A simple and trusted starting point is the <a id="myBtn">50/30/20 rule</a></h2> -->
 
-        <p id="budgetNeeds"></p>
-        <p id="budgetWants"></p>
-        <p id="budgetSavings"></p>
-    </div>
+          <div class="accordioncontainer">
+            <button class="accordion">
+              <div id="budgetNeeds">Needs budget</div>
+            </button>
+            <div class="panel">
+              Monthly expenses to live, such as:
+                <ul>
+                  <li>Rent/mortgage</li>
+                  <li>Utilities</li>
+                  <li>Groceries</li>
+                  <li>Medications</li>
+                  <li>Transportation</li>
+                </ul>
+            </div>
+          </div>
+
+          <div class="accordioncontainer">
+            <button class="accordion">
+              <div id="budgetWants">Wants budget</div>
+            </button>
+            <div class="panel">
+              Life is meant to be enjoyed. This budget is for:
+                <ul>
+                  <li>Restaurants</li>
+                  <li>Hobbies</li>
+                  <li>Entertainment</li>
+                  <li>Vacations</li>
+                  <li>Gifts/donations</li>
+                </ul>
+            </div>
+          </div>
+
+          <div class="accordioncontainer">
+            <button class="accordion">
+              <div id="budgetSavings">Savings budget</div>
+            </button>
+            <div class="panelLastChild">
+              This is your path to building financial safety. Think:
+                <ul>
+                  <li>Unexpected expenses such as car repairs</li>
+                  <li>Emergency fund in case of job loss</li>
+                  <li>Debt</li>
+                  <li>Retirement</li>
+                  <li>Down payment for a house</li>
+                </ul>
+            </div>
+          </div>
+
+    </div>   
 
     <div class="section">
-        <h3>Housing</h3>
-        <h2>Aim for your share of housing to cost <a>25% to 30%</a> of your income.</h2>
+      <h3>Housing</h3>
+        <h2>Aim for housing to cost <a>25% to 30%</a> of your income</h2>
+  
+          <div class="accordioncontainer">
+            <button class="accordion">
+              <div id="housingLow">25%</div>
+            </button>
+            <ul class="panel">
+              <li>Housing impacts your finances the most. If possible, aim for 25% or less.</li>
+              <li id="housingLowPoint1">How much left for needs</li>
+              <li id="housingLowPoint2">How much left for wants</li>
+              <li id="housingLowPoint3">How much left for savings</li>
+            </ul>
+          </div>
 
-        <p id="housingLow"></p>
-        <p id="housingHigh"></p>
+          <div class="accordioncontainer">
+            <button class="accordion">
+              <div id="housingHigh">30%</div>
+            </button>
+            <ul class="panelLastChild">
+              <li>If 25% is not possible in your area, 30% may be used.</li>
+              <li id="housingHighPoint1">How much left for needs</li>
+              <li id="housingHighPoint2">How much left for wants</li>
+              <li id="housingHighPoint3">How much left for savings</li>
+            </ul>
+          </div>
+
     </div>
 
-    <div class="section">
-        <h3>Emergency savings</h3>
-        <h2>Save <a>3 to 6 months</a> of necessary expenses for unexpected situations.</h2>
 
-        <p id="savings3"></p>
-        <p id="savings6"></p>
-        <p id="savings12"></p>
+    <div class="section">
+      <h3>Emergency fund</h3>
+        <h2>Start with the <a>3/6/9</a> rule to determine how much to have in your emergency fund</h2>
+  
+          <div class="accordioncontainer">
+            <button class="accordion">
+              <div id="savings3">For 3 months of needs</div>
+            </button>
+            <ul class="panel">
+              <li id="savings3Time1">Add your monthly take home pay to see how long it'll take to save on your savings budget</li>
+              <li id="savings3Time2">How long it'll take to save on your wants and savings budget</li>
+              <li id="savings3Time3">How long it'll take to save if you spent $0 a month</li>
+            </ul>
+          </div>
+
+          <div class="accordioncontainer">
+            <button class="accordion">
+              <div id="savings6">For 6 months of needs</div>
+            </button>
+            <ul class="panel">
+              <li id="savings6Time1">Add your monthly take home pay to see how long it'll take to save on your savings budget</li>
+              <li id="savings6Time2">How long it'll take to save on your wants and savings budget</li>
+              <li id="savings6Time3">How long it'll take to save if you spent $0 a month</li>
+            </ul>
+          </div>
+
+          <div class="accordioncontainer">
+            <button class="accordion">
+              <div id="savings9">For 9 months of needs</div>
+            </button>
+            <ul class="panelLastChild">
+              <li id="savings9Time1">Add your monthly take home pay to see how long it'll take to save on your savings budget</li>
+              <li id="savings9Time2">How long it'll take to save on your wants and savings budget</li>
+              <li id="savings9Time3">How long it'll take to save if you spent $0 a month</li>
+            </ul>
+          </div>
+
     </div>
 
     <div class="section">
@@ -46,7 +149,18 @@
         <p>Freelance rate</p>
     </div>
 
-  <script src="script.js"></script>
 
+  <!-- 50/30/20 Modal ---------------------------------------------------------------------------------------->
+  
+  <div id="myModal" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <h1>What is the 50/30/20 rule?</h1>
+      <p>Experts agree that lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </div>
+  </div>
+
+
+  <script src="script.js"></script>
   </body>
 </html>
