--- a/calc/index.html
+++ b/calc/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css" type="text/css">
   </head>
 
-  <body>
+  <body class="appleLinksBlack">
 
 
 <!-- Accordion ----------------------------------------------------------------------------------------------->
