--- a/rate-calculator-wa.html
+++ b/rate-calculator-wa.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head><title>Freelance calculator | Washington</title>
+    <meta http-equiv="refresh" content="0; URL=http://michellefong.co/calc/freelance-rate.html" />
     <style type="text/css">
 
       * {
@@ -19,51 +20,9 @@
       }
 
     </style>
+    
   </head>
   <body>
-
-    <p>This tool can help you get started with setting your hourly rate. This calculator is only intended to be a starting point, speak with a CPA to be sure the tax rates are correct for your case.</p>
-    <p>What is your pre-tax salary? No commas please :')</p>
-    $<input type="text" id="salaryInput" value="100000">
-    <button onclick="calculate();">Calculate</button>
-    <br>
-    <br>
-
-    <br>After a 20% tax, your salary's take home pay is $<span id="salaryYearlyTakehome"></span>
-    <br>That's $<span id="salaryMonthlyTakehome"></span> a month.
-    <br>
-
-    <br>Self employment tax is 15%, so you'd only need to make $<span id="selfemYearlyProfit"></span> to match your salary.
-    <br>Not including holidays, that's $<span id="selfemMonthlyProfit"></span> a month.
-    <br>Or, $<span id="selfemWeeklyProfit"></span> a week.
-    <br>Or, $<span id="selfemDailyProfit"></span> a workday.
-    <br>
-
-    <br>Privately, your minimum hourly rate is $<span id="selfemHourlyRate"></span>. A rule of thumb is to double this amount,
-    to account for benefits like insurance, software, time between projects, etc.
-    <br>
-    <br>To work 5 days a week and make the equivalent of your salary, consider a $<span id="selfemDailyProfitDouble"></span>/hr rate.
-    <br>To work 4 days a week and make the equivalent of your salary, consider a $<span id="selfemWork4Days"></span>/hr rate.
-    <br>To work 3 days a week and make the equivalent of your salary, consider a $<span id="selfemWork3Days"></span>/hr rate.
-    <br>
-
-    <script>
-
-      function calculate() {
-        salaryYearlyTakehome.innerHTML = Math.round(salaryInput.value*0.80);
-        salaryMonthlyTakehome.innerHTML = Math.round(salaryInput.value*0.80/12);
-        selfemYearlyProfit.innerHTML = Math.round(salaryYearlyTakehome.innerHTML/0.85);
-        selfemMonthlyProfit.innerHTML = Math.round(selfemYearlyProfit.innerHTML/12);
-        selfemWeeklyProfit.innerHTML = Math.round(selfemYearlyProfit.innerHTML/48);
-        selfemDailyProfit.innerHTML = Math.round(selfemYearlyProfit.innerHTML/240);
-        selfemHourlyRate.innerHTML = Math.round(selfemDailyProfit.innerHTML/8);
-        selfemDailyProfitDouble.innerHTML = Math.round(selfemHourlyRate.innerHTML*2);
-        selfemWork4Days.innerHTML = Math.round(selfemWeeklyProfit.innerHTML/4/8*2);
-        selfemWork3Days.innerHTML = Math.round(selfemWeeklyProfit.innerHTML/3/8*2);
-        selfemWork2Days.innerHTML = Math.round(selfemWeeklyProfit.innerHTML/2/8*2);
-        selfemWork1Day.innerHTML = Math.round(selfemWeeklyProfit.innerHTML/8*2);
-      }
-
-    </script>
+    Redirecting to latest version. Click <a href="http://michellefong.co/calc/freelance-rate.html">here</a> if you aren't redirected.
   </body>
 </html>
