--- a/calc/freelance-rate.html
+++ b/calc/freelance-rate.html
@@ -23,6 +23,18 @@
 
     <p class="hint" id="confirmation">Your breakdown</p>
 
+    <div class="accordioncontainer"><button class="accordion"><div>
+        On salary, you're taking home $<span id="salaryYearlyTakehome">_</span> a year.
+          </div></button><div class="panel">
+          <p>That comes out to:
+            <ul>
+              <li>$<span id="salaryMonthlyTakehome">_</span> a month after taxes.</li>
+              <li>$<span id="salaryWeeklyTakehome">_</span> a week after taxes.</li>
+              <li>$<span id="salaryDailyTakehome">_</span> a day after taxes.</li>
+              <li>$<span id="salaryHourlyTakehome">_</span> an hour after taxes. (This is not your freelance rate)</li>
+            </ul>
+      </div></div>
+
       <div class="accordioncontainer"><button class="accordion"><div>
         On salary, you're taking home $<span id="salaryYearlyTakehome">_</span> a year.
           </div></button><div class="panel">
